<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="transfer">Received</string>
    <string name="redeem">Spent</string>
    <string name="confirm_to_pay">Do you confirm the payment for</string>
    <string name="pay_for">for</string>
    <string name="pay_label">Pay</string>
    <string name="pay_button">Pay</string>
    <string name="activity_show_qr_code_title">Your QR code</string>
    <string name="activity_show_qr_code_hint">Show this QR code to the shop owner to receive vouchers.</string>
    <string name="welcome_text">Welcome!\nEnter your name to start using the app.</string>
    <string name="welcome_username_label">Name</string>
    <string name="welcome_username_input_hint">Name</string>
    <string name="welcome_get_started_button">Get started</string>
    <string name="create_user_error" type="id">Name should be at least 3 characters.</string>
</resources>
