<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:padding="@dimen/layout_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/logo_margin"
            android:paddingBottom="50dp"
            android:paddingTop="25dp"
            android:src="@drawable/vallet_logo" />

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:lineSpacingMultiplier="1.50"
            style="@style/RegularText"
            android:text="@string/welcome_text" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineSpacingMultiplier="1.19"
            style="@style/LabelText"
            android:text="@string/welcome_username_label"
            />

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/welcome_username_input_hint"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            style="@style/InputText"
            android:layout_marginBottom="20dp"
            tools:text="Name" />


    </LinearLayout>

    <Button
        android:id="@+id/getStarterd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_margin="20dp"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:fontFamily="@font/work_sans_medium"
        android:textAllCaps="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/welcome_get_started_button" />
</android.support.constraint.ConstraintLayout>
