<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pay_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">


    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/close_button"/>


    <TextView
        android:id="@+id/pay_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_label"
        android:fontFamily="@font/work_sans"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="42sp"
        android:textAlignment="center"
        android:fontFamily="@font/work_sans_bold"
        app:layout_constraintTop_toBottomOf="@+id/pay_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#ff333333"
        tools:text="10" />

    <TextView
        android:id="@+id/payForLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_for"
        android:fontFamily="@font/work_sans"
        android:layout_margin="38dp"
        app:layout_constraintTop_toBottomOf="@+id/price_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularText"
        android:textSize="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/payForLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Piwo"
        />

    <Button
        android:id="@+id/pay_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:layout_margin="20dp"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:fontFamily="@font/work_sans_medium"
        android:textAllCaps="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/pay_button" />

</android.support.constraint.ConstraintLayout>
